# rust-sidekiq

./: Cargo.toml  README.md
benches/: basic_basic.rs
src/: lib.rs
src/sidekiq/: mod.rs
tests/: lib.rs
